--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://lia.ustc-zzzz.net/",
+  "homepage": "https://lia.ustc-zzzz.net/",
   "name": "yigedinglia",
   "version": "0.1.0",
   "dependencies": {
@@ -7,6 +7,7 @@
     "@types/node": "12.7.1",
     "@types/react": "16.8.25",
     "@types/react-dom": "16.8.5",
+    "copy-to-clipboard": "^3.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.0.1",
